<resources>
    <string name="app_name">Unit Convert</string>
    <string name="conversion">Conversion</string>
    <string name="please_enter">Please Enter</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="convert">Convert</string>
    <string name="please_enter_your_unit">Enter unit</string>
    <string name="please_enter_your_value">Please enter your value</string>
</resources>