<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFD1DC"
    android:orientation="vertical"
    android:paddingStart="22dp"
    android:paddingTop="20dp"
    android:paddingEnd="22dp"
    android:paddingBottom="24dp">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="17dp"
        android:text="@string/conversion"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/inputEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/please_enter_your_value"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fromTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textStyle="bold" />
            <Spinner
                android:id="@+id/conversionFromSpinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/toTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textStyle="bold" />
            <Spinner
                android:id="@+id/conversionToSpinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/convertButton"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="14dp"
        android:background="#FFD1DC"
        android:text="@string/convert"
        android:textColor="#000000"
        android:textSize="15sp" />


    <TextView
        android:id="@+id/outputTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="italic|bold"/>

</LinearLayout>